--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,11 +1,25 @@
 :root {
-  --color-dark: #05172c;
-  --color-grey-dark: #84949f;
-  --color-grey: #b7bdc4;
-  --color-grey-light: #e4e6e9;
-  --color-light: #f4f5f5;
-  --color-white: #ffffff;
-  --color-green: #86bf3e;
-  --color-red: #fc4b4e;
-  --color-yellow: #fec740;
+  --color-main-darkest: #0F081F; //main -70
+  --color-main-dark: #46008C; //main -40
+  --color-main-medium-dark: #5D00BA; //main -20
+  --color-main-medium: #7400E9; //main 00
+  --color-main-medium-light: #8157E4; //main 20
+  --color-main-light: #BA82F0; //main 40
+  --color-main-lightest: #DCBAFF; //main 70
+
+  --color-gray-darkest: #2F2F2F; //gray -70
+  --color-gray-dark: #828282; //gray -50
+  --color-gray-medium-dark: #BDBDBD; //gray -30
+  --color-gray-medium-light: #E8E8E8; //gray -20
+  --color-gray-light: #F6F6F6; //gray -10
+  --color-gray-lightest: #FFFFFF; //gray 00
+
+  --color-background: #0F081F;
+
+  --color-status-error: #FF3434;
+  --color-status-attencion: #FFD260;
+  --color-status-success: #19B100;
+
+  --color-teams-blue: #FF3434;
+  --color-teams-red: #206EE2;
 }
