--- a/src/templates/Homepage/styles.module.scss
+++ b/src/templates/Homepage/styles.module.scss
@@ -1,3 +1,40 @@
 .homepage {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--padding-page);
+  height: 100%;
+
+  .bgImage {
+    z-index: 0;
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    flex: 1;
+    top: 25%;
+    max-height: calc(100% - 25%);
+    justify-content: space-between;
+
+    .text {
+      color: var(--color-gray-lightest);
+    }
+
+    .middleText {
+      margin: var(--spacing-3) 0 var(--spacing-4);
+    }
+  }
+
+  .btnsContainer {
+    width: 100%;
+
+    a:first-of-type {
+      margin-bottom: var(--spacing-3);
+    }
+  }
 }
