--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -22,4 +22,7 @@
 
   --color-teams-blue: #FF3434;
   --color-teams-red: #206EE2;
+
+  --color-field-bg-default: rgba(221, 186, 255, 0.1);
+  --color-field-bg-selected: rgba(221, 186, 255, 0.04);
 }
