--- a/src/templates/Login/styles.module.scss
+++ b/src/templates/Login/styles.module.scss
@@ -2,4 +2,5 @@
   background-color: var(--color-background);
   color: var(--color-gray-lightest);
   height: 100%;
+  padding: var(--spacing-5) var(--padding-page) var(--padding-page);
 }
