--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './colors.scss';
-@import './typography.scss';
 @import './defaultTheme.scss';
+@import './typography.scss';
+@import './mixins.scss';
 @import './spacing.scss';
 @import './reset.scss';
 @import './variables.scss';
