--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -5,6 +5,7 @@
   color: var(--color-gray-lightest);
   position: fixed;
   display: flex;
+  z-index: 10;
 
   .content {
     margin-left: var(--spacing-1);
