[WIP] - Register page

--- a/src/templates/Register/styles.module.scss
+++ b/src/templates/Register/styles.module.scss
@@ -1,6 +1,6 @@
 @import 'src/styles/mixins.scss';
 
-.login {
+.register {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
