--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -9,3 +9,8 @@
   font-size: var(--font-size-button);
   font-weight: var(--font-weight-bold);
 }
+
+@mixin typographyCaptionRegular {
+  font-family: var(--font-primary-family);
+  font-size: var(--font-size-caption);
+}
