--- a/src/templates/Login/styles.module.scss
+++ b/src/templates/Login/styles.module.scss
@@ -10,6 +10,7 @@
   padding: var(--spacing-5) var(--padding-page) var(--spacing-4);
 
   .bottomContainer {
+    margin-top: var(--spacing-2);
     display: flex;
     flex-direction: column;
     align-items: center;
